2005-11-13  Bruno coudoin  <bruno.coudoin@free.fr>
	    
	From HEAD, applied a patch that should fix the
	decoration disapearing under KDE when switching
	fullscreen/window mode.

	* src/gcompris/gcompris.c: (gcompris_set_fullscreen):

2005-11-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Merged from HEAD.
	Fixed typos.
	Now money is not Euros only. You can translate it and put your money symbol.

	* boards/colors_group.xml.in:
	* boards/guessnumber.xml.in:
	* src/boards/money.c: (money_next_level):

2005-11-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Merge of HEAD. 
	Fixed several issues related to change between fullscreen mode
	and window mode. Now if xrandr is enabled, the configuration dialog in GCompris
	will toggle fullscreen/window mode on the fly.

	* src/gcompris/config.c: (item_event_ok):
	* src/gcompris/gcompris.c: (init_background), (setup_window),
	(gcompris_set_fullscreen), (gcompris_exit), (xrandr_set_config),
	(gcompris_init):
	* src/gcompris/gcompris.h:

2005-11-06  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/gcompris.c: (init_background), (gcompris_exit),
	(gcompris_init): From HEAD. Fix recursive exit on segfault.
	Fix segfault on exit when fullscreen is set in the config box.

2005-11-04  Yves Combe  <yves@ycombe.net>

	Merged commit from HEAD.
	Fix signal name presentation in gcompris_terminate.
	Suppress gnome_canvas_update_now in menu (cause of segfault in fullscreen mode).

	* src/boards/menu.c: (menu_start):
	* src/gcompris/gcompris.c: (gcompris_terminate):

2005-11-04  Bruno coudoin  <bruno.coudoin@free.fr>

	reviewed by: <delete if not using a buddy>

	* src/boards/menu.c: (menu_start):
	* src/gcompris/gcompris.c: (gcompris_terminate):


	*** RELEASE 7.1PRE2 ***

2005-11-03  Bruno coudoin  <bruno.coudoin@free.fr>

	Port of commit in HEAD 2005-11-01:
	- Fixes text of board description being badly wrapped
	  I now use the richtext canvas to display it. We may
	  loose on reliabilty.

	* boards/canal_lock.xml.in: